--- a/index.html
+++ b/index.html
@@ -40,8 +40,13 @@
                     <h1>Ristorante con Fusion</h1>
                     <p class="d-none d-sm-block">We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid">
+                <div class="row col-12 col-sm-6 align-items-center">
+                    <div class="col-5 mx-auto my-0">
+                        <img src="img/logo.png" class="col-12 img-fluid">
+                    </div>
+                    <div class="col-5 col-xl-4">
+                        <a role="button" class="col-12 btn btn-sm btn-block btn-success" href="#reserve">Reserve Table </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -52,11 +57,11 @@
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
-            <div class="media">
+            <div class="d-flex col-sm-8 col-md-9">
                 <img class="d-flex mr-3 img-thumbnail align-self-center"
                         src="img/uthappizza.png" alt="Uthappizza">
-                <div class="media-body">
-                    <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span><span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                <div class="col-12 col-sm-8">
+                    <h2 class="mt-0">Uthappizza<span class="badge bg-danger">HOT</span><span class="badge badge-pill bg-secondary">$4.99</span></h2>
                     <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
                         Italian pizza, topped with Cerignola olives, ripe vine
                         cherry tomatoes, Vidalia onion, Guntur chillies and
@@ -70,9 +75,13 @@
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="col-sm-8 col-md-9 d-flex">
+                <div class="">
+                    <h2 class="mt-0">Weekend Grand Buffet <span class="badge bg-danger"><strong>NEW</strong></span></h2>
+                    <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                </div>
+                <img src="img/buffet.png" alt="Buffet image" 
+                class="d-flex img-thumbnail align-self-center">
             </div>
         </div>
 
@@ -80,10 +89,10 @@
             <div class="col col-sm order-sm-first col-md">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
-            <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center"
+            <div class="d-flex col-sm-8 col-md-9">
+                <img class="mr-3 img-thumbnail align-self-center"
                         src="img/alberto.png" alt="Alberto Somayya">
-                <div class="media-body">
+                <div class="col-12 col-sm-8">
                     <h2 class="mt-0">Alberto Somayya</h2>
                     <h4>Executive Chef</h4>
                     <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
@@ -92,6 +101,77 @@
                         creating mouthwatering Indo-Italian fusion experiences.
                         </p>
                 </div>
+            </div>
+        </div>
+        <div class="row row-content align-self-center justify-content-center">
+            <div class="card col-md-8 col-12 align-self-center">
+                    <h3 class="card-header text-center bg-success"><strong>Reserve a Table</strong></h3>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row">
+                                <label for="fullName" class="col-sm-2 col-form-label">Full Name</label>
+                                <div class="col-12 col-sm-8">
+                                    <input type="text" class="form-control" name="fullname" id="fullName" placeholder="John Doe">
+                                </div>
+                            </div>
+                            <div class="form-group mt-1 row">
+                                <label for="reservationdate" class="col-sm-2 col-form-label">Date</label>
+                                <div class="col-12 col-sm-8">
+                                    <input type="date" class="form-control" name="reservationdate" id="reservationdate" placeholder="selectdate">
+                                </div>
+                            </div>
+                            <div class="form-group mt-1 row">
+                                <label for="reservationtime" class="col-sm-2 col-form-label">Time</label>
+                                <div class="col-12 col-sm-8">
+                                    <input type="time" class="form-control" name="reservationtime" id="reservationtime" placeholder="Enter Time">
+                                </div>
+                            </div>
+                            <div class="form-group mt-2 row">
+                                <h4 class="col-12 col-lg-2">No of Guests</h4>
+                                <div class="form-check col-1 form-check-inline">
+                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
+                                    <label class="form-check-label" for="no_of_guests">
+                                    1
+                                    </label>
+                                </div>
+                                <div class="form-check col-1 form-check-inline">
+                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
+                                    <label class="form-check-label" for="no_of_guests">
+                                    2
+                                    </label>
+                                </div>
+                                <div class="form-check col-1 form-check-inline">
+                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
+                                    <label class="form-check-label" for="no_of_guests">
+                                    3
+                                    </label>
+                                </div>
+                                <div class="form-check col-1 form-check-inline">
+                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
+                                    <label class="form-check-label" for="no_of_guests">
+                                    4
+                                    </label>
+                                </div>
+                                <div class="form-check col-1 form-check-inline">
+                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
+                                    <label class="form-check-label col-2" for="no_of_guests">
+                                    5
+                                    </label>
+                                </div>
+                                <div class="form-check col-1 form-check-inline">
+                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
+                                    <label class="form-check-label" for="no_of_guests">
+                                    6
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="form-group row" id="reserve" >
+                                <div class="mx-auto col-8">
+                                    <button type="submit" class="btn col-10 btn-success">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
             </div>
         </div>
     </div>
