--- a/index.html
+++ b/index.html
@@ -86,8 +86,98 @@
                     </div>
                     <div class="col-5 col-xl-4">
                         <a role="button" class="btn btn-block nav-link btn-warning"
-                        data-toggle="tooltip" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
+                        data-toggle="modal" data-target="#reserveModal" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
                         data-placement="bottom" href="#reserveform">Reserve Table</a>
+                        <div id="reserveModal" class="modal fade" role="dialog">
+                            <div class="modal-dialog modal-lg" role="content">
+                                <!-- Modal content-->
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title">Reserve Table </h4>
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form>
+                                            <div class="form-group row">
+                                                <label for="fullName" class="col-sm-2 col-form-label">Full Name</label>
+                                                    <div class="col-12 col-sm-8">
+                                                        <input type="text" class="form-control" name="fullname" id="fullName" placeholder="John Doe">
+                                                    </div>
+                                            </div>
+                                            <div class="form-group mt-1 row">
+                                                <label for="reservationdate" class="col-sm-2 col-form-label">Date</label>
+                                                <div class="col-12 col-sm-8">
+                                                    <input type="date" class="form-control" name="reservationdate" id="reservationdate" placeholder="selectdate">
+                                                </div>
+                                            </div>
+                                            <div class="form-group mt-1 row">
+                                                <label for="reservationtime" class="col-sm-2 col-form-label">Time</label>
+                                                <div class="col-12 col-sm-8">
+                                                    <input type="time" class="form-control" name="reservationtime" id="reservationtime" placeholder="Enter Time">
+                                                </div>
+                                            </div>
+                                            <div class="form-group mt-1 row">
+                                                <h4 class="col-2">Section</h4>
+                                                <div class="btn-group" role="group" aria-label="Basic radio toggle button group mixed styles example">
+                                                    <label class="btn btn-outline-success" for="success-outlined">Non-Smoking</label>
+                                                    <input type="radio" class="btn-check" name="options-outlined" id="success-outlined" autocomplete="off" checked>
+                                                    
+                                                    <label class="btn btn-outline-danger" for="danger-outlined">Smoking</label>
+                                                    <input type="radio" class="btn-check" name="options-outlined" id="danger-outlined" autocomplete="off">
+                                                </div>
+                                            </div>
+                                            <div class="form-group mt-2 row">
+                                                <h4 class="col-12 col-lg-2">No of Guests</h4>
+                                                <div class="form-check col-1 form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
+                                                    <label class="form-check-label" for="no_of_guests">
+                                                        1
+                                                    </label>
+                                                </div>
+                                                <div class="form-check col-1 form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
+                                                    <label class="form-check-label" for="no_of_guests">
+                                                        2
+                                                    </label>
+                                                </div>
+                                                <div class="form-check col-1 form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
+                                                    <label class="form-check-label" for="no_of_guests">
+                                                        3
+                                                    </label>
+                                                </div>
+                                                <div class="form-check col-1 form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
+                                                    <label class="form-check-label" for="no_of_guests">
+                                                        4
+                                                    </label>
+                                                </div>
+                                                <div class="form-check col-1 form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
+                                                    <label class="form-check-label col-2" for="no_of_guests">
+                                                        5
+                                                    </label>
+                                                </div>
+                                                <div class="form-check col-1 form-check-inline">
+                                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
+                                                    <label class="form-check-label" for="no_of_guests">
+                                                        6
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="form-group row" id="reserve" >
+                                                <div class="mx-auto col-8">
+                                                    <button type="submit" class="btn col-10 btn-success">Reserve</button>
+                                                </div>
+                                            </div>
+                                            <div class="form-row">
+                                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -317,11 +407,4 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
-</body>
-
 </html>
