--- a/index.html
+++ b/index.html
@@ -85,18 +85,21 @@
                         <img src="img/logo.png" class="col-12 img-fluid">
                     </div>
                     <div class="col-5 col-xl-4">
-                        <a role="button" class="btn btn-block nav-link btn-warning"
-                        data-toggle="modal" data-target="#reserveModal" data-html="true"  title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reserveform">Reserve Table</a>
-                        <div id="reserveModal" class="modal fade" role="dialog">
-                            <div class="modal-dialog modal-lg" role="content">
-                                <!-- Modal content-->
+                        
+                        <button type="button" class="btn btn-block btn-warning" data-bs-toggle="modal" data-bs-target="#reserveModal" title="Or Call us at  <br><strong>+852 12345678</strong>"
+                            data-placement="bottom">
+                            Reserve Table
+                        </button>
+
+                        <div id="reserveModal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h4 class="modal-title">Reserve Table </h4>
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        <h5 class="modal-title col-10" id="exampleModalLabel">Reserve Table </h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
+                                        <div class="container-fluid">
                                         <form>
                                             <div class="form-group row">
                                                 <label for="fullName" class="col-sm-2 col-form-label">Full Name</label>
@@ -118,7 +121,7 @@
                                             </div>
                                             <div class="form-group mt-1 row">
                                                 <h4 class="col-2">Section</h4>
-                                                <div class="btn-group" role="group" aria-label="Basic radio toggle button group mixed styles example">
+                                                <div class="btn-group col-8" role="group" aria-label="Basic radio toggle button group mixed styles example">
                                                     <label class="btn btn-outline-success" for="success-outlined">Non-Smoking</label>
                                                     <input type="radio" class="btn-check" name="options-outlined" id="success-outlined" autocomplete="off" checked>
                                                     
@@ -127,7 +130,7 @@
                                                 </div>
                                             </div>
                                             <div class="form-group mt-2 row">
-                                                <h4 class="col-12 col-lg-2">No of Guests</h4>
+                                                <h5 class="col-12 col-xs-3">No of Guests</h5>
                                                 <div class="form-check col-1 form-check-inline">
                                                     <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
                                                     <label class="form-check-label" for="no_of_guests">
@@ -136,9 +139,7 @@
                                                 </div>
                                                 <div class="form-check col-1 form-check-inline">
                                                     <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
-                                                    <label class="form-check-label" for="no_of_guests">
-                                                        2
-                                                    </label>
+                                                    <label class="form-check-label" for="no_of_guests">2</label>
                                                 </div>
                                                 <div class="form-check col-1 form-check-inline">
                                                     <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
@@ -165,13 +166,9 @@
                                                     </label>
                                                 </div>
                                             </div>
-                                            <div class="form-group row" id="reserve" >
-                                                <div class="mx-auto col-8">
+                                            <div class="modal-footer" id="reserve" >
                                                     <button type="submit" class="btn col-10 btn-success">Reserve</button>
-                                                </div>
-                                            </div>
-                                            <div class="form-row">
-                                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-bs-dismiss="modal">Cancel</button>
                                             </div>
                                         </form>
                                     </div>
@@ -288,79 +285,6 @@
                 </div>
             </div>
         </div>
-        <div class="row row-content align-self-center justify-content-center">
-            <div class="card col-md-8 col-12 align-self-center">
-                    <h3 class="card-header text-center bg-success"><strong>Reserve a Table</strong></h3>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group row">
-                                <label for="fullName" class="col-sm-2 col-form-label">Full Name</label>
-                                <div class="col-12 col-sm-8">
-                                    <input type="text" class="form-control" name="fullname" id="fullName" placeholder="John Doe">
-                                </div>
-                            </div>
-                            <div class="form-group mt-1 row">
-                                <label for="reservationdate" class="col-sm-2 col-form-label">Date</label>
-                                <div class="col-12 col-sm-8">
-                                    <input type="date" class="form-control" name="reservationdate" id="reservationdate" placeholder="selectdate">
-                                </div>
-                            </div>
-                            <div class="form-group mt-1 row">
-                                <label for="reservationtime" class="col-sm-2 col-form-label">Time</label>
-                                <div class="col-12 col-sm-8">
-                                    <input type="time" class="form-control" name="reservationtime" id="reservationtime" placeholder="Enter Time">
-                                </div>
-                            </div>
-                            <div class="form-group mt-2 row">
-                                <h4 class="col-12 col-lg-2">No of Guests</h4>
-                                <div class="form-check col-1 form-check-inline">
-                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
-                                    <label class="form-check-label" for="no_of_guests">
-                                    1
-                                    </label>
-                                </div>
-                                <div class="form-check col-1 form-check-inline">
-                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
-                                    <label class="form-check-label" for="no_of_guests">
-                                    2
-                                    </label>
-                                </div>
-                                <div class="form-check col-1 form-check-inline">
-                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
-                                    <label class="form-check-label" for="no_of_guests">
-                                    3
-                                    </label>
-                                </div>
-                                <div class="form-check col-1 form-check-inline">
-                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
-                                    <label class="form-check-label" for="no_of_guests">
-                                    4
-                                    </label>
-                                </div>
-                                <div class="form-check col-1 form-check-inline">
-                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
-                                    <label class="form-check-label col-2" for="no_of_guests">
-                                    5
-                                    </label>
-                                </div>
-                                <div class="form-check col-1 form-check-inline">
-                                    <input class="form-check-input" type="radio" name="no_of_guests" id="no_of_guests">
-                                    <label class="form-check-label" for="no_of_guests">
-                                    6
-                                    </label>
-                                </div>
-                            </div>
-                            <div class="form-group row" id="reserve" >
-                                <div class="mx-auto col-8">
-                                    <button type="submit" class="btn col-10 btn-success">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-            </div>
-        </div>
-    </div>
-
     <footer class="footer">
         <div class="container">
             <div class="row">             
